# studio-data-tools

./: .env.example  .gitignore  README.md  pyproject.toml  run_examples.sh  setup_uv.sh
docs/: README.md  aitrios_studio_guide.md  developer_guide.md  prompt_generator_architecture.md  prompt_generator_implementation.md  prompt_generator_index.md  prompt_generator_usage_guide.md  quick_start_guide.md
studio_data_tools/: __init__.py  __main__.py  cli.py
studio_data_tools/core/: __init__.py  dataset_processor.py  image_generator.py  prompt_generator.py
studio_data_tools/core/prompts/: __init__.py  general_scenes.json  general_scenes.py  object_scenes.json  object_scenes.py  templates.py
